--- a/team/UtilClass/모각코 유틸 클래스 팀 소개.md
+++ b/team/UtilClass/모각코 유틸 클래스 팀 소개.md
@@ -1,10 +1,11 @@
 ## 소개
 - 팀장: 박지열
 - 팀원: 이동순, 정수빈, 김민준 
-- 목적: 데이터를 전처리하고 음성패턴 인식 코드를 구현함
+- 목적: 음성 데이터를 전처리하고, 각 음성 패턴 데이터를 화자에 따라 인식, 인지, 분리, 분할하는 코드를 구현함
 
 ## 계획
-- 7월 6일 : 화자 분석, 인식 등등 
+- 7월 6일 - 1주차: 블로그 만들고, 음성 패턴 인식 개념과 종류에 대해 공부하기
+- 7월 11일 - 2주차: 각자 맡은 음성 패턴 인식 파트 공부하기
 
 ## 회고
 - 회고회고회고
