--- a/team/UtilClass/7월 11일 모각코.md
+++ b/team/UtilClass/7월 11일 모각코.md
@@ -1,14 +1,19 @@
 ---
 sticker: emoji//1f618
 ---
+## 2주차 활동 계획
+
 - 활동 일시: 7월 11일(목) / 14:00 ~ 17:00
 
 - 2주차 목표: 각자 맡은 음성 패턴 인식 파트 공부하기
 
-박지열(팀장): 
-이동순: https://github.com/Ledn05/Ledn05.github.io
-김민준: https://github.com/Blummerhen/Blummerhen.github.io
-정수빈: [2주차 : 네이버 블로그 (naver.com)](https://m.blog.naver.com/qwert0483/223509271740)
+## 2주차 개인 블로그
 
+- [박지열(팀장) 2주차 활동 내용](https://jiyeol9081.github.io/jiyeol'sblog/2주차-활동-내용)
+- 이동순: https://github.com/Ledn05/Ledn05.github.io
+- 김민준: https://github.com/Blummerhen/Blummerhen.github.io
+- [정수빈 2주차 활동 내용](https://m.blog.naver.com/qwert0483/223509271740)
+
+## 2주차 활동 사진
 
 ![[Pasted image 20240711162123.png]]
