--- a/team/UtilClass/7월 6일 모각코.md
+++ b/team/UtilClass/7월 6일 모각코.md
@@ -10,8 +10,8 @@ sticker: emoji//1f636-200d-1f32b-fe0f
 ## 1주차 개인 블로그
 
 - [박지열(팀장) 1주차 활동 내용](https://jiyeol9081.github.io/jiyeol'sblog/1주차-활동-내용)
-- 이동순: https://github.com/Ledn05/Ledn05.github.io
-- 김민준: https://github.com/Blummerhen/Blummerhen.github.io
+- [이동순 1주차 활동 내용](https://github.com/Ledn05/Ledn05.github.io)
+- [김민준 1주차 활동 내용](https://github.com/Blummerhen/Blummerhen.github.io)
 - [정수빈 1주차 활동 내용](https://m.blog.naver.com/qwert0483/223509245542)
 
 ## 1주차 활동 사진
