--- a/team/UtilClass/7월 6일 모각코.md
+++ b/team/UtilClass/7월 6일 모각코.md
@@ -16,7 +16,8 @@ sticker: emoji//1f636-200d-1f32b-fe0f
 
 ## 1주차 활동 사진
 
-![[Pasted image 20240711161852.png]]
+![1주차 활동 사진](/image/Pasted image 20240711161852.png)
+
 
 
 
