--- a/team/UtilClass/7월 11일 모각코.md
+++ b/team/UtilClass/7월 11일 모각코.md
@@ -10,8 +10,8 @@ sticker: emoji//1f618
 ## 2주차 개인 블로그
 
 - [박지열(팀장) 2주차 활동 내용](https://jiyeol9081.github.io/jiyeol'sblog/2주차-활동-내용)
-- [이동순 2주차 활동 내용](https://github.com/Ledn05/Ledn05.github.io)
-- [김민준 2주차 활동 내용](https://github.com/Blummerhen/Blummerhen.github.io)
+- [이동순 2주차 활동 내용](https://ledn05.tistory.com)
+- [김민준 2주차 활동 내용](https://blummerhen.tistory.com/2)
 - [정수빈 2주차 활동 내용](https://m.blog.naver.com/qwert0483/223509271740)
 
 ## 2주차 활동 사진
