--- a/jiyeol'sblog/2주차 활동 내용.md
+++ b/jiyeol'sblog/2주차 활동 내용.md
@@ -9,9 +9,9 @@ sticker: emoji//1f995
 ## 활동결과
 
 - 화자분할(Speaker Diarization): 두 사람 이상이 대화를 하는 경우 각 화자를 구분하는 기술로, 화자가 다르다는 것을 인식하기 위한 기술이다.
-![[Pasted image 20240714164025.png]]
+![[image2.1.png]]
 화자 분할 과정
-![[Pasted image 20240714164109.png]]
+![[image2.2.png]]
 1. Front-End Processing  
 	음성 향상 / 잡음 / 반향 제거 등의 전처리를 수행하며  
     중첩되는 음성 영역을 각각 분리한다. (Speech separation)
@@ -21,7 +21,7 @@ sticker: emoji//1f995
 3. Segmentation (음성 분할)  
 	입력 오디오 스트림을 여러 세그먼트로 나누어 화자 균일 세그먼트를 얻는다.  
 	아래 예시 그림의 경우, 3명의 화자의 음성을 균일하게 나눈 것이다.
-	![[Pasted image 20240714164342.png]]
+	![[image2.3.png]]
 4. Speaker Embedding  
     각 세그먼트의 임베딩을 구한다. 예) i-vector, DNN-based embeddings…
 5. Clustering  
@@ -32,4 +32,4 @@ sticker: emoji//1f995
 6.  Post Processing  
     최종적으로 결과를 더 잘 나타내기 위해 다시 한번 정제하는 과정이다.
     이 과정을 마치면 화자 분할의 공식 포맷인 'RTTM' 포맷에 맞춰 화자 분할 정보를 출력하는데, 이 RTTM 파일로부터 '누가 언제부터 언제까지 말했는가' 를 알 수 있다.
-    ![[Pasted image 20240714164931.png]]
+    ![[image2.4.png]]
