--- a/team/UtilClass/모각코 유틸 클래스 팀 소개.md
+++ b/team/UtilClass/모각코 유틸 클래스 팀 소개.md
@@ -11,8 +11,8 @@ sticker: emoji//1f6a9
 - 7월 6일 /  22:00 ~ 01:00 - 1주차: 블로그 만들고, 음성 패턴 인식 개념과 종류에 대해 공부하기
 - 7월 11일 / 14:00 ~ 17:00 - 2주차: 각자 맡은 음성 패턴 인식 파트 공부하기
 - 7월 19일 / 19:00 ~ 22:00 - 3주차: 음성 패턴 인식 라이브러리 공부하기
-- 7월 26일 / 19:00 ~ 22:00 - 4주차: 
-- 8월 2일 / 19:00 ~ 22:00 - 5주차: 
+- 7월 26일 / 19:00 ~ 22:00 - 4주차: speech recognition에 대해 공부하기
+- 8월 2일 / 19:00 ~ 22:00 - 5주차: 코드 짜보고 구현해보기
 - 8월 7일 / 19:00 ~ 22:00 - 6주차: 
 
 
