--- a/team/UtilClass/7월 26일 모각코.md
+++ b/team/UtilClass/7월 26일 모각코.md
@@ -5,6 +5,11 @@ sticker: emoji//1f60e
 
 - 활동 일시: 7월 26일(금) / 14:00 ~ 17:00
 
-- 4주차 목표: 
+- 4주차 목표: speechbrain에서 각자 맡은 역할에 대한 모델 공부하기
 
 ## 4주차 개인 블로그
+
+- [박지열(팀장) 4주차 활동 내용](https://jiyeol9081.github.io/jiyeol'sblog/4주차-활동-내용)
+- [이동순 4주차 활동 내용](https://ledn05.tistory.com/4)
+- [김민준 4주차 활동 내용](https://blummerhen.tistory.com/4)
+- [정수빈 4주차 활동 내용](https://m.blog.naver.com/qwert0483/223518676900)
