--- a/team/UtilClass/7월 26일 모각코.md
+++ b/team/UtilClass/7월 26일 모각코.md
@@ -12,4 +12,7 @@ sticker: emoji//1f60e
 - [박지열(팀장) 4주차 활동 내용](https://jiyeol9081.github.io/jiyeol'sblog/4주차-활동-내용)
 - [이동순 4주차 활동 내용](https://ledn05.tistory.com/4)
 - [김민준 4주차 활동 내용](https://blummerhen.tistory.com/4)
-- [정수빈 4주차 활동 내용](https://m.blog.naver.com/qwert0483/223518676900)
+- [정수빈 4주차 활동 내용](https://m.blog.naver.com/qwert0483/223540230481)
+
+## 4주차 활동 사진
+![[image 4.png]]
