--- a/team/UtilClass/8월 2일 모각코.md
+++ b/team/UtilClass/8월 2일 모각코.md
@@ -5,5 +5,14 @@ sticker: emoji//1f609
 
 - 활동 일시: 8월 2일(금) / 14:00 ~ 17:00
 
-- 5주차 목표: 
+- 5주차 목표: 각자 역할에 대한 코드 작성 및 이해하기
+
 ## 5주차 개인 블로그
+
+- [박지열(팀장) 5주차 활동 내용](https://jiyeol9081.github.io/jiyeol'sblog/5주차-활동-내용)
+- [이동순 5주차 활동 내용](https://ledn05.tistory.com/5)
+- [김민준 5주차 활동 내용](https://blummerhen.tistory.com/5)
+- [정수빈 5주차 활동 내용](https://m.blog.naver.com/qwert0483/223548248854)
+
+## 5주차 활동 사진
+![[image5.png]]
