--- a/team/UtilClass/8월 9일 모각코.md
+++ b/team/UtilClass/8월 9일 모각코.md
@@ -5,6 +5,13 @@ sticker: emoji//1f925
 
 - 활동 일시: 8월 9일(금) / 14:00 ~ 17:00
 
-- 6주차 목표: 
+- 6주차 목표: 코드 작성 마무리 및 각자 이해한 내용 발표하기
 
 ## 6주차 개인 블로그
+
+- [박지열(팀장) 6주차 활동 내용](https://jiyeol9081.github.io/jiyeol'sblog/6주차-활동-내용)
+- [이동순 6주차 활동 내용](https://ledn05.tistory.com/6)
+- [김민준 6주차 활동 내용](https://blummerhen.tistory.com/6)
+- [정수빈 6주차 활동 내용](https://m.blog.naver.com/qwert0483/223548250879)
+
+## 6주차 활동 사진
