--- a/team/UtilClass/모각코 유틸 클래스 팀 소개.md
+++ b/team/UtilClass/모각코 유틸 클래스 팀 소개.md
@@ -12,9 +12,10 @@ sticker: emoji//1f6a9
 - 7월 11일 / 14:00 ~ 17:00 - 2주차: 각자 맡은 음성 패턴 인식 파트 공부하기
 - 7월 19일 / 19:00 ~ 22:00 - 3주차: 음성 패턴 인식 라이브러리 공부하기
 - 7월 26일 / 19:00 ~ 22:00 - 4주차: speechbrain에서 각자 맡은 역할에 대한 모델 공부하기
-- 8월 2일 / 19:00 ~ 22:00 - 5주차: 
-- 8월 7일 / 19:00 ~ 22:00 - 6주차: 
+- 8월 2일 / 19:00 ~ 22:00 - 5주차: 각자 역할에 대한 코드 작성 및 이해하기
+- 8월 7일 / 19:00 ~ 22:00 - 6주차: 코드 작성 마무리 및 각자 이해한 내용 발표하기
+
 
 
 ## 회고
-- 회고회고회고
+- 
