--- a/jiyeol'sblog/5주차 활동 내용.md
+++ b/jiyeol'sblog/5주차 활동 내용.md
@@ -3,6 +3,23 @@ sticker: emoji//1f40a
 ---
 ---
 ## 5주차 목표
-- 미정
+- 각자 역할에 대한 코드 작성 및 이해하기
 
 ## 활동결과
+1. is_overlapped: 세그먼트가 겹치는 경우 True를 반환한다.
+   ![[image5.1.png]]
+   
+2. merge_ssegs_same_speaker: 동일한 스피커에서 인접한 하위 세그먼트를 병합한다.
+   ![[image5.2.png]]
+   
+3. distribute_overlap: 겹쳐진 음성을 다른 스피커와 함께 인접 세그먼트 간에 균등하게 분배한다.
+   ![[image5.3.png]]
+   
+4. get_oracle_num_spkrs: 실측 자료에서 녹음의 실제 화자 수를 반환한다. 조건이 oracle number of speakers일 때 사용할 수 있다.
+   ![[image5.4.png]]
+   
+5. spectral_embedding_sb: 스펙트럼 임베딩을 반환한다.
+   ![[image5.5.png]]
+   
+6. spectral_clustering_sb: 스펙트럼 클러스터링을 수행한다.
+   ![[image5.6.png]]
