--- a/team/UtilClass/모각코 유틸 클래스 팀 소개.md
+++ b/team/UtilClass/모각코 유틸 클래스 팀 소개.md
@@ -18,4 +18,4 @@ sticker: emoji//1f6a9
 
 
 ## 회고
-- 
+- 이번 프로젝트는 음성 패턴 인식에 대한 이해를 높이고 실제 적용 사례를 경험할 수 있는 시간이었다. 1주차에 블로그를 만들고, 음성 패턴 인식의 종류와 개념을 배우는 시간을 가졌다. 이후 3,4주차에 라이브러리와 speechbrain을 활용해 모델을 공부하며 실습 경험을 쌓았다. 마지막 5,6주차에 실제 코드 작성에 집중하며 각자의 역할에 맞는 구현을 완성했다. 특히 6주차에는 코드 작성 후 발표를 통해 팀원들과 소통 능력을 강화할 수 있었고, 공부한 내용을 설명하면서 한 번 더 내용을 상기시킬 수있었다. 이번 프로젝트는 음성 인식 기술에 대한 실무적인 이해를 심화할 수 있었고, 앞으로의 학습 공부 방향을 설정하는 데 큰 도움이 되었다. 
